[package]
name = "rat"
version = "0.1.0"
authors = ["Cameron Dart <cdart@anduril.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tokio = { version = "1.0.1", features = [ "fs", "macros", "rt", "signal" ] }
